agruihalgiwergh never gonna finish

--- a/src/scss/body.sass
+++ b/src/scss/body.sass
@@ -71,3 +71,12 @@ svg
 
 #root > div
   overflow: visible !important
+
+
+div.blankslide
+  background-color: #111111
+  height: 100%
+  width: 100%
+  position: absolute
+  top: 0
+  left: 0
